# anomalib-patchcore-libtorch-cmake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
